119 openmdx 4jakarta ee 10 based (#122)
* MDX-44 & MDX-7 change Bundling for JDO 3.1

* Fixes #55 add streaming tests

---------

Co-authored-by: Dirty Harry <dirty-harry@ikmail.com>